# VaultViz

./: .gitignore  BACKLOG-HORS-CORE.md  BACKLOG.md  CLAUDE.md  PRD.md  README.md  VaultViz.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml
docs/: author.md  deploy.md
docs/acceptance/: README.md
docs/adr/: ADR-001-duckdb-natif.md  ADR-002-mosaic-vgplot.md  ADR-003-parquet-arrow.md  ADR-004-tauri-2.md  ADR-005-signature-dsi.md  ADR-006-msi-bundler.md  ADR-007-unc-paths.md  ADR-008-no-network.md  ADR-009-maplibre-ign.md  ADR-010-windows-11-only.md  ADR-011-export-pdf-v1.md  ADR-012-design-system.md  ADR-PDF.md  ADR-PMTiles-basemap.md  ADR-V0-GoNoGo-template.md  ADR-V1-GoNoGo-template.md
docs/bench/: BENCH.md
docs/handoff/: demo-script.md  dsi-signing-package.md  feedback-collection.md  feedback-grid.md  mecm-pilot-package.md
docs/scripts/: bench-50mb.sh  gen-synth-parquet.sh
docs/superpowers/plans/: 2026-05-28-v0-execution.md  2026-05-28-v0-real-interpreter.md  2026-05-29-design-integration-master-waves.md  2026-05-29-sp0-refondation-docs-backlog.md  2026-05-30-cleanup-anciens-modeles.md  2026-05-31-execution-complete-v1.md
docs/superpowers/specs/: 2026-05-29-integration-design-maquette-design.md  2026-05-29-integration-powerbi-inventaire-design.md
docs/user/: format-vviz.md  user.md
examples/: controle_gestion.vviz  controle_gestion_categories.parquet  controle_gestion_departements.parquet  controle_gestion_quarters.parquet  cross_filter_demo.vviz  demo_dept.parquet  demo_dept.vviz  effectifs_2026.vviz  sample.parquet  suivi_mensuel.vviz  suivi_mensuel_canal.parquet  suivi_mensuel_mois.parquet
examples/fixtures/: one_row.ipc
mockups/VaultViz/: .thumbnail  Style Guide.html  VaultViz.html
mockups/VaultViz/assets/: app.js  data.js  france-map.js  styles.css  tweaks.js
ref/: LICENSE.md  departements.topojson
schema/: vviz-v1.json
scripts/: build-geo.sh  dev-bootstrap.sh
src/: main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/examples/: bench_50mb.rs  gen_controle_gestion.rs  gen_demo_dept.rs  gen_fixtures.rs  gen_suivi_mensuel.rs  gen_synth.rs
src-tauri/src/: duck.rs  error.rs  lib.rs  log.rs  main.rs  state.rs
src-tauri/src/commands/: cache.rs  diag.rs  mod.rs  query.rs  startup.rs  vviz.rs  watch.rs
src-tauri/tests/: capability_smoke.rs  duck_parquet.rs  duck_smoke.rs  log_rotation.rs  read_vviz.rs  watch_smoke.rs
src/__tests__/: _vgplot-stub.ts  arrow-roundtrip.test.ts  bar-chart.test.ts  cross-filter-emit.test.ts  csv-export.test.ts  dashboard-tabs.test.ts  drill-query.test.ts  duck-connector.test.ts  error-banner.test.ts  examples-valid.test.ts  file-open.test.ts  filter-chip.test.ts  format.test.ts  grouped-bars.test.ts  home.test.ts  icons.test.ts  kpi-card.test.ts  line-chart.test.ts  loader.test.ts  map-choropleth-gl.test.ts  map-libre.test.ts  map-view-engine.test.ts  map-view.test.ts  mosaic-runtime.test.ts  path-resolver.test.ts  pdf-export.test.ts  pie-chart.test.ts  plot-view.test.ts  pmtiles-source.test.ts  png-export.test.ts  ranked-bars.test.ts  recents.test.ts  refresh-banner.test.ts  schema-validator.test.ts  shell-router.test.ts  slicer-integration.test.ts  slicer-panel.test.ts  source-loader.test.ts  spec-loader.test.ts  table-view.test.ts  (+11 more)
src/assets/: LICENSE.md
src/components/: bar-chart.ts  error-banner.ts  filter-chip.ts  grouped-bars.ts  home.ts  kpi-card.ts  line-chart.ts  loader.ts  map-choropleth-gl.ts  map-libre.ts  map-view.ts  pie-chart.ts  plot-view.ts  pmtiles-source.ts  ranked-bars.ts  refresh-banner.ts  slicer-panel.ts  tab-bar.ts  table-view.ts  titlebar.ts  toolbar.ts  welcome.ts
src/services/: csv-export.ts  diag.ts  file-open.ts  pdf-export.ts  png-export.ts  recents.ts  watcher.ts
src/shell/: dashboard.ts  layout.ts  router.ts  tabs.ts
src/styles/: components.css  layout.css  main.css  map.css  tokens.css
src/ui/: format.ts  icons.ts  theme.ts
src/utils/: schema-validator.ts
src/viz-engine/: drill-query.ts  duck-connector.ts  index.ts  mosaic-runtime.ts  path-resolver.ts  source-loader.ts  spec-loader.ts  sql-helpers.ts  types.ts  view-compiler.ts  view-mounter.ts  where-builder.ts
