[package]
name = "vaultviz"
version = "0.0.1"
description = "VaultViz — desktop dataviz local-first pour CPAM 92"
authors = ["CPAM 92"]
edition = "2021"
rust-version = "1.75"

# Tauri 2 generates a library + thin desktop entry point
[lib]
name = "vaultviz_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

# DuckDB natif statique (ADR-001). Feature `bundled` compile DuckDB en C++
# embarqué dans le binaire : pas de DLL externe à déployer sur Windows 11.
# Le crate ré-exporte `arrow` (cf. `duckdb::arrow::…`) — on s'en sert pour
# l'écriture IPC dans `duck.rs` (B-021/B-022) afin d'éviter tout version skew.
duckdb = { version = "1", features = ["bundled"] }

[dev-dependencies]
tempfile = "3"
