[package]
name = "vaultviz"
version = "0.0.1"
description = "VaultViz — desktop dataviz local-first pour CPAM 92"
authors = ["CPAM 92"]
edition = "2021"
rust-version = "1.75"

# Tauri 2 generates a library + thin desktop entry point
[lib]
name = "vaultviz_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

# B-062 — timestamps + résolution du dossier `%LOCALAPPDATA%\VaultViz\logs`
# (PRD §6.4). `chrono` en `default-features = false` + `clock` + `serde`
# suffit pour `Utc::now()` et le formatage ISO-8601 — on n'a pas besoin
# de tout `chrono-tz`. `directories` (5.x) expose `BaseDirs` qui pointe
# sur le bon répertoire LOCALAPPDATA sur Windows et fallback `~/.local/share`
# sur Linux pour le dev.
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
directories = "5"

# DuckDB natif statique (ADR-001). Feature `bundled` compile DuckDB en C++
# embarqué dans le binaire : pas de DLL externe à déployer sur Windows 11.
# Le crate ré-exporte `arrow` (cf. `duckdb::arrow::…`).
duckdb = { version = "1", features = ["bundled"] }

# Apache Arrow — uniquement la feature `ipc` (stream writer/reader). On
# pin sur la *même* version majeure que celle utilisée en interne par
# `duckdb-rs` ("58", cf. `[dependencies.arrow]` du manifest duckdb). Cargo
# unifie alors les deux dépendances en UN seul artefact `arrow 58.x`,
# évitant tout version skew des types `RecordBatch` / `Schema` entre
# l'itérateur DuckDB et le `StreamWriter`. À re-aligner manuellement si
# `duckdb-rs` bump son arrow majeur (rare : ils suivent les LTS).
arrow = { version = "58", default-features = false, features = ["ipc"] }

[dev-dependencies]
tempfile = "3"
